package com.fintrack.backend.enums;

public enum SavingStatus {
    ACTIVE,
    COMPLETED,
    WITHDRAWN
}
