package com.fintrack.backend.enums;

public enum TransactionType {
    INCOME,
    EXPENSE,
    TRANSFER
}
